[package]
name = "recuring_task_manager"
version = "0.1.0"
authors = ["1934877 <zerox029@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"